@@ -1,3 +1,8 @@
+2008-03-03  Reinhard Max  <max@suse.de>
+
+	* unix/tclUnixChan.c: Fix mark and space parity on Linux, which
+	uses CMSPAR instead of PAREXT.
+
 2008-02-27  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* library/http/pkgIndex.tcl: Backported 2.5.5 changes from
